--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -1,6 +1,4 @@
-<h2>
-  <editable title-edit-only="true" title="Label"><input class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
-</h2>
+<editable title="Label"><input class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
 <editable title="Id"><input type="text" id-input ng-model="predicate.curie" /></editable>
 <editable title="Comment"><textarea class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
 <editable title="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
