--- a/src/components/model/classForm.html
+++ b/src/components/model/classForm.html
@@ -1,6 +1,4 @@
-<h2>
-  <editable title-edit-only="true" title="Label"><input class="form-control" type="text" localized-input ng-model="class.label"/></editable>
-</h2>
+<editable title="Label"><input class="form-control" type="text" localized-input ng-model="class.label"/></editable>
 <editable title="Id"><input class="form-control" type="text" id-input ng-model="class.curie" /></editable>
 <editable title="Comment"><textarea class="form-control" localized-input ng-model="class.comment"></textarea></editable>
 <div ng-show="class.subClassOf">
