--- a/src/app.scss
+++ b/src/app.scss
@@ -84,7 +84,7 @@
   @include clearfix;
 
   z-index: 1000;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
 
   p.button-label {
     padding-top: 8px;
