--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -1,10 +1,6 @@
 <div ng-hide="ctrl.loading">
 
-  <div class="top">
-    <form>
-      <model-view></model-view>
-    </form>
-  </div>
+  <form><model-view></model-view></form>
 
   <div class="bottom" ng-if="ctrl.isModelSaved()">
     <div class="model-panel--left" float="model-panel--left-placeholder">
