--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -2,7 +2,7 @@
   <h2>{{ctrl.model | translateLabel}}<button type="button" class="btn btn-default right" ng-click="ctrl.toggleVisibility()">{{ctrl.togglingText() | translate}}</button></h2>
 </div>
 
-<div uib-collapse="!ctrl.visible" class="row editable-content">
+<div uib-collapse="!ctrl.visible" class="editable-content">
 
   <div class="top-actions">
     <model-language-chooser></model-language-chooser>
