Edit model in edit not the original one

--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -22,7 +22,7 @@
     <div class="model-view__title" translate>Id</div>
     <div>{{ctrl.modelInEdit.id}}</div>
     <editable title="Comment"><textarea class="form-control" localized-input ng-model="ctrl.modelInEdit.comment"></textarea></editable>
-    <editable title="State" value-as-localization-key="true"><state-select state="ctrl.model.state"></state-select></editable>
+    <editable title="State" value-as-localization-key="true"><state-select state="ctrl.modelInEdit.state"></state-select></editable>
   </div>
 
   <div class="col-md-6">
