Refactor to enable breadcrumb and breadcrumb impemented

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,10 @@
   display: none !important;
 }
 
+.breadcrumb {
+  padding: 10px;
+}
+
 .editable-content {
   @include clearfix;
   padding-bottom: 10px;
