--- a/src/components/model/predicateForm.html
+++ b/src/components/model/predicateForm.html
@@ -1,8 +1,8 @@
-<editable title="Label"><input class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
-<editable title="Id"><input type="text" id-input ng-model="predicate.curie" /></editable>
-<editable title="Comment"><textarea class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
-<editable title="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
-<editable title="Value class" ng-if="predicate.isAssociation()"><class-select class-name="predicate.range"></class-select></editable>
+<editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
+<editable title="Id"><input name="Id" type="text" id-input ng-model="predicate.curie" /></editable>
+<editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
+<editable title="Range" name="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
+<editable title="Value class" name="Value class" ng-if="predicate.isAssociation()"><class-select class-name="predicate.range"></class-select></editable>
 <div class="model-view__title" translate>Is defined by</div>
 <div>{{predicate.modelId}}</div>
 <editable title="State" value-as-localization-key="true"><state-select state="predicate.state"></state-select></editable>
