--- a/src/components/model/propertyView.html
+++ b/src/components/model/propertyView.html
@@ -4,9 +4,9 @@
     <button ng-show="selectionViewController.canRemoveProperty()" type="button" class="btn btn-default right" ng-click="selectionViewController.removeProperty(property)" translate>Delete property</button>
   </div>
 
-  <editable title="Name"><input class="form-control" type="text" localized-input ng-model="property.label" /></editable>
-  <editable title="Comment"><textarea class="form-control" localized-input ng-model="property.comment"></textarea></editable>
-  <editable title="Example"><input class="form-control" type="text" localized-input ng-model="property.example" /></editable>
+  <editable title="Name"><input name="Name" class="form-control" type="text" localized-input ng-model="property.label" /></editable>
+  <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="property.comment"></textarea></editable>
+  <editable title="Example"><input name="Example" class="form-control" type="text" localized-input ng-model="property.example" /></editable>
   <editable title="Range" ng-if="predicate.isAttribute()"><range-select range="property.datatype"></range-select></editable>
   <editable title="Value class" ng-if="predicate.isAssociation()"><class-select class-name="property.valuesClass"></class-select></editable>
   <uib-accordion>
