--- a/src/app.scss
+++ b/src/app.scss
@@ -11,12 +11,7 @@
 }
 
 .breadcrumb {
-  padding: 10px;
-}
-
-.editable-content {
-  @include clearfix;
-  padding-bottom: 10px;
+  margin-bottom: 0;
 }
 
 .component {
@@ -38,18 +33,19 @@
 }
 
 .model-header {
-  background-color: #f5f5f5;
-  padding: 15px;
-  border: solid 1px #ddd;
   cursor: pointer;
-
-  h2 {
-    margin: 0;
+  h2:hover {
+    text-decoration: underline;
   }
-
-  button {
-    float: right;
+  h2 .glyphicon {
+    font-size: large;
   }
+}
+
+.model-editable-content {
+  @include clearfix;
+  padding-bottom: 10px;
+  border-top: solid 1px #ddd;
 }
 
 .modal-dialog {
