--- a/src/components/model/selectionView.html
+++ b/src/components/model/selectionView.html
@@ -22,7 +22,7 @@
           </div>
         </div>
 
-        <div class="selection-form">
+        <div class="selection-form" window-height="min" padding="135">
           <class-form ng-if="ctrl.selection.isClass()" class="ctrl.selectionInEdit" references="ctrl.model.references"></class-form>
           <predicate-form ng-if="ctrl.selection.isPredicate()" predicate="ctrl.selectionInEdit" references="ctrl.model.references"></predicate-form>
         </div>
