--- a/src/components/model/model.scss
+++ b/src/components/model/model.scss
@@ -32,8 +32,8 @@ $navbarWidth: 275px;
     padding: 9px 0;
   }
 
-  .add-class-button {
-    margin: 9px;
+  .add-new-button {
+    margin: 3px 9px 9px 9px;
     width: calc(100% - 23px);
   }
 
