--- a/src/components/navigation/modelLanguageChooser.html
+++ b/src/components/navigation/modelLanguageChooser.html
@@ -1,4 +1,4 @@
-<p class="left button-label text">
+<p class="left button-label text"></p>
 <div class="btn-group left" uib-dropdown is-open="status.isopen">
   <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
     {{'data ' + currentLanguage() | translate}} <span class="caret"></span>
