--- a/src/components/model/addConceptModal.html
+++ b/src/components/model/addConceptModal.html
@@ -1,33 +1,30 @@
-<div class="modal-header modal-header-confirm">
-  <h4 class="modal-title ng-binding">
-    <span>{{ctrl.defineConceptTitle | translate}}</span>
-    <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.cancel()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
-  </h4>
-</div>
+<modal-template>
+  <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-<div class="modal-body search-modal">
-  <form name="conceptForm">
+  <modal-body class="search-modal">
+    <form name="conceptForm">
 
-    <label for="conceptLabel" translate>Concept</label>
-    <div class="input-group input-group-md">
-      <input id="conceptLabel" type="text" class="form-control" autofocus required ng-model="ctrl.conceptLabel" />
-    </div>
+      <label for="conceptLabel" translate>Concept</label>
+      <div class="input-group input-group-md">
+        <input id="conceptLabel" type="text" class="form-control" autofocus required ng-model="ctrl.conceptLabel" />
+      </div>
 
-    <label for="conceptComment" translate>Comment</label>
-    <div class="input-group input-group-md">
-      <textarea id="conceptComment" class="form-control" autofocus required ng-model="ctrl.conceptComment"></textarea>
-    </div>
+      <label for="conceptComment" translate>Comment</label>
+      <div class="input-group input-group-md">
+        <textarea id="conceptComment" class="form-control" autofocus required ng-model="ctrl.conceptComment"></textarea>
+      </div>
 
-    <label for="name" translate>Label</label>
-    <div class="input-group input-group-md">
-      <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
-    </div>
+      <label for="name" translate>Label</label>
+      <div class="input-group input-group-md">
+        <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
+      </div>
 
-    <p><span translate>Concept is suggested to scheme</span> {{ctrl.reference.title | translateValue}}</p>
-  </form>
-</div>
+      <p><span translate>Concept is suggested to scheme</span> {{ctrl.reference.title | translateValue}}</p>
+    </form>
+  </modal-body>
 
-<div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-disabled="!conceptForm.$valid" translate>Create new</button>
-</div>
+  <modal-buttons>
+    <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
+    <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-disabled="!conceptForm.$valid" translate>Create new</button>
+  </modal-buttons>
+</modal-template>
