--- a/src/components/model/searchConceptModal.html
+++ b/src/components/model/searchConceptModal.html
@@ -1,47 +1,56 @@
-<div class="modal-header modal-header-confirm">
-  <h4 class="modal-title ng-binding">
-    <span>{{ctrl.defineConceptTitle | translate}}</span>
-    <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.cancel()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
-  </h4>
-</div>
+<modal-template>
+  <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-<div class="modal-body search-modal" ng-show="ctrl.references.length > 0">
-  <form id="conceptForm" name="conceptForm">
+  <modal-body class="search-modal">
+    <div ng-show="ctrl.references.length > 0">
+      <form id="conceptForm" name="conceptForm">
 
-    <label for="reference" translate>Reference</label>
-    <div class="input-group input-group-lg">
-      <div class="selectContainer">
-        <select id="reference" class="form-control" ng-model="ctrl.vocabularyId">
-          <option value="" translate>All references</option>
-          <option ng-repeat="reference in ctrl.references" value="{{reference.vocabularyId}}">{{reference.title | translateValue}}</option>
-        </select>
-      </div>
+        <label for="reference" translate>Reference</label>
+        <div class="input-group input-group-lg">
+          <div class="selectContainer">
+            <select id="reference" class="form-control" ng-model="ctrl.vocabularyId">
+              <option value="" translate>All references</option>
+              <option ng-repeat="reference in ctrl.references" value="{{reference.vocabularyId}}">{{reference.title | translateValue}}</option>
+            </select>
+          </div>
+        </div>
+
+        <label for="concept" translate>Concept</label>
+        <div class="input-group input-group-md">
+          <input id="concept"
+                 type="text"
+                 class="form-control"
+                 autofocus
+                 iow-typeahead
+                 selection-mapper="ctrl.mapSelection"
+                 options="ctrl.options"
+                 datasets="ctrl.datasets"
+                 required
+                 ng-model="ctrl.concept"
+                 placeholder="{{'Search from concept database' | translate}}"/>
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        </div>
+
+        <label for="concept" translate>Comment</label>
+        <p>{{ctrl.concept.comment | translateValue}}</p>
+
+        <div ng-if="ctrl.newCreation">
+          <label for="name" translate>Label</label>
+          <div class="input-group input-group-md">
+            <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
+          </div>
+        </div>
+
+      </form>
     </div>
 
-    <label for="concept" translate>Concept</label>
-    <div class="input-group input-group-md">
-      <input id="concept" type="text" class="form-control" autofocus iow-typeahead selection-mapper="ctrl.mapSelection" options="ctrl.options" datasets="ctrl.datasets" required ng-model="ctrl.concept" placeholder="{{'Search from concept database' | translate}}"/>
-      <i class="glyphicon glyphicon-search form-control-feedback"></i>
+    <div ng-hide="ctrl.references.length > 0">
+      <p translate>Concepts can't be searched because there are no vocabularies</p>
     </div>
+  </modal-body>
 
-    <label for="concept" translate>Comment</label>
-    <p>{{ctrl.concept.comment | translateValue}}</p>
-
-    <div ng-if="ctrl.newCreation">
-      <label for="name" translate>Label</label>
-      <div class="input-group input-group-md">
-        <input id="name" type="text" class="form-control" required ng-model="ctrl.label" />
-      </div>
-    </div>
-
-  </form>
-</div>
-
-<div class="modal-body search-modal" ng-hide="ctrl.references.length > 0">
-  <p translate>Concepts can't be searched because there are no vocabularies</p>
-</div>
-
-<div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
-  <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.references.length > 0" ng-disabled="!conceptForm.$valid">{{ctrl.buttonTitle | translate}}</button>
-</div>
+  <modal-buttons>
+    <button class="btn btn-default" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
+    <button class="btn btn-default" type="button" ng-click="ctrl.create()" ng-show="ctrl.references.length > 0" ng-disabled="!conceptForm.$valid">{{ctrl.buttonTitle | translate}}</button>
+  </modal-buttons>
+</modal-template>
