--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -4,32 +4,24 @@
   </h2>
 </div>
 
-<div uib-collapse="!ctrl.visible" class="model-editable-content">
+<form name="form">
+  <div uib-collapse="!ctrl.visible" class="model-editable-content">
 
-  <div class="top-actions">
-    <model-language-chooser></model-language-chooser>
-    <button type="button" class="btn btn-default right" ng-click="ctrl.cancelEditing()" ng-show="ctrl.isEditing()" translate>Cancel edit</button>
-    <button type="button" class="btn btn-default right" ng-click="ctrl.update()" ng-show="ctrl.isEditing()" translate>Save changes</button>
-    <button type="button" class="btn btn-default right" ng-click="ctrl.edit()" ng-show="ctrl.canEdit()" translate>Edit</button>
-    <button type="button" class="btn btn-default right" ng-click="ctrl.addReference()" ng-show="ctrl.canAddReference()" translate>Add reference</button>
+    <editable-buttons editable-controller="ctrl">
+      <button type="button" class="btn btn-default right" ng-click="ctrl.addReference()" ng-show="ctrl.canModify()" translate>Add reference</button>
+    </editable-buttons>
 
-    <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
-      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-      <span translate>Save failed</span>
+    <div class="col-md-6">
+      <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.modelInEdit.label" /></editable>
+      <div class="model-view__title" translate>Id</div>
+      <div>{{ctrl.modelInEdit.id}}</div>
+      <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="ctrl.modelInEdit.comment"></textarea></editable>
+      <editable title="State" value-as-localization-key="true"><state-select state="ctrl.modelInEdit.state"></state-select></editable>
+    </div>
+
+    <div class="col-md-6">
+      <references-view references="ctrl.modelInEdit.references"></references-view>
+      <requires-view requires="ctrl.modelInEdit.requires"></requires-view>
     </div>
   </div>
-
-  <div class="col-md-6">
-    <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.modelInEdit.label" /></editable>
-    <div class="model-view__title" translate>Id</div>
-    <div>{{ctrl.modelInEdit.id}}</div>
-    <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="ctrl.modelInEdit.comment"></textarea></editable>
-    <editable title="State" value-as-localization-key="true"><state-select state="ctrl.modelInEdit.state"></state-select></editable>
-  </div>
-
-  <div class="col-md-6">
-    <references-view references="ctrl.modelInEdit.references"></references-view>
-    <requires-view requires="ctrl.modelInEdit.requires"></requires-view>
-  </div>
-
-</div>
+</form>
