--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -8,7 +8,7 @@
       </span>
     </uib-accordion-heading>
     <div class="top-actions">
-      <button ng-show="modelViewController.canRemoveReference()" type="button" class="btn btn-default right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
+      <button ng-show="modelViewController.canModify()" type="button" class="btn btn-default right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
     </div>
     <div class="model-view__title" translate>Identifier</div>
     <div>{{reference.vocabularyId}}</div>
